Feat: Yaml & atajos

--- a/Backend/Go/1.Sintaxis&Variables.md
+++ b/Backend/Go/1.Sintaxis&Variables.md
@@ -273,10 +273,9 @@ go run main.go argumento1 argumento2
 
 La salida será:
 
-```csharp
+```text
 [main.go argumento1 argumento2]
 Argumento 1: argumento1
-
 ```
 
 ## 1.8. CLI en Go
