--- a/DevOps & Despliegue/Versionado/1.Git.md
+++ b/DevOps & Despliegue/Versionado/1.Git.md
@@ -1,3 +1,886 @@
 # Git
 
-Git es el sistema de control de versiones distribuido más utilizado. Permite a los desarrolladores realizar un seguimiento de los cambios en el código fuente y colaborar en proyectos de manera eficiente.
+Una guía exhaustiva sobre Git, desde comandos básicos hasta workflows avanzados para equipos de desarrollo profesional.
+
+## 1. Fundamentos de Git
+
+### Estados de los archivos en Git
+
+Git maneja los archivos en diferentes estados durante su ciclo de vida:
+
+| Estado    | Descripción                          | Comando para ver      |
+| --------- | ------------------------------------ | --------------------- |
+| Untracked | Archivos nuevos, Git no los conoce   | `git status`          |
+| Staged    | Archivos preparados para commit      | `git status --staged` |
+| Modified  | Archivos cambiados pero no staged    | `git diff`            |
+| Committed | Archivos guardados en el repositorio | `git log`             |
+
+### Áreas de trabajo en Git
+
+```bash
+Working Directory  →  Staging Area  →  Repository (.git)
+      ↓                    ↓               ↓
+   git add            git commit      git push
+```
+
+### Configuración inicial
+
+```bash
+# Configuración global
+git config --global user.name "Tu Nombre"
+git config --global user.email "tu@email.com"
+git config --global init.defaultBranch main
+
+# Configuración del editor
+git config --global core.editor "code --wait"  # VS Code
+git config --global core.editor "vim"          # Vim
+
+# Ver configuración
+git config --list
+git config --global --list
+```
+
+### Inicializar repositorio
+
+```bash
+# Nuevo repositorio local
+git init
+git init nombre-proyecto
+
+# Clonar repositorio existente
+git clone https://github.com/usuario/repo.git
+git clone https://github.com/usuario/repo.git nuevo-nombre
+```
+
+## 2. Comandos Básicos
+
+### Status y diferencias
+
+```bash
+# Ver estado del repositorio
+git status
+git status -s  # Formato corto
+
+# Ver diferencias
+git diff                    # Working directory vs Staging
+git diff --staged          # Staging vs último commit
+git diff HEAD              # Working directory vs último commit
+git diff commit1 commit2   # Entre dos commits específicos
+```
+
+### Agregar archivos al staging
+
+```bash
+# Agregar archivos específicos
+git add archivo.txt
+git add src/
+
+# Agregar todos los archivos
+git add .
+git add -A
+
+# Agregar interactivamente
+git add -i
+git add -p  # Patch mode - agregar por chunks
+```
+
+### Commits
+
+```bash
+# Commit básico
+git commit -m "Mensaje descriptivo"
+
+# Commit con descripción detallada
+git commit -m "Título corto" -m "Descripción más detallada
+explicando qué y por qué se hicieron los cambios"
+
+# Commit incluyendo archivos modificados
+git commit -am "Mensaje"
+
+# Modificar último commit
+git commit --amend -m "Nuevo mensaje"
+git commit --amend --no-edit  # Agregar cambios sin cambiar mensaje
+```
+
+### Historial
+
+```bash
+# Ver historial
+git log
+git log --oneline
+git log --graph
+git log --all --graph --oneline --decorate
+
+# Filtrar historial
+git log --author="nombre"
+git log --since="2024-01-01"
+git log --until="2024-02-01"
+git log --grep="fix"
+
+# Ver cambios en commits
+git show
+git show commit-hash
+git show HEAD~1  # Commit anterior
+```
+
+### Deshacer cambios
+
+```bash
+# Descartar cambios en working directory
+git checkout -- archivo.txt
+git restore archivo.txt
+
+# Sacar archivos del staging
+git reset HEAD archivo.txt
+git restore --staged archivo.txt
+
+# Deshacer último commit (mantener cambios)
+git reset --soft HEAD~1
+
+# Deshacer último commit (descartar cambios)
+git reset --hard HEAD~1
+
+# Revertir commit específico (crear nuevo commit)
+git revert commit-hash
+```
+
+## 3. Branching y Merging
+
+### Gestión de branches
+
+```bash
+# Listar branches
+git branch           # Locales
+git branch -r        # Remotas
+git branch -a        # Todas
+
+# Crear branch
+git branch nueva-feature
+git checkout -b nueva-feature    # Crear y cambiar
+git switch -c nueva-feature     # Alternativa moderna
+
+# Cambiar de branch
+git checkout main
+git switch main
+
+# Eliminar branch
+git branch -d feature-completa   # Solo si está merged
+git branch -D feature-cancelada  # Forzar eliminación
+```
+
+### Merging
+
+```bash
+# Merge básico (desde rama destino)
+git checkout main
+git merge feature-branch
+
+# Merge sin fast-forward (preserva historial)
+git merge --no-ff feature-branch
+
+# Merge squash (todos los commits en uno)
+git merge --squash feature-branch
+git commit -m "Feature: Nueva funcionalidad completa"
+```
+
+### Tipos de merge
+
+| Tipo         | Comando              | Resultado                              |
+| ------------ | -------------------- | -------------------------------------- |
+| Fast-forward | `git merge branch`   | Linear, mueve puntero                  |
+| No-FF        | `git merge --no-ff`  | Preserva estructura, crea merge commit |
+| Squash       | `git merge --squash` | Combina todos los commits en uno       |
+
+### Rebase
+
+```bash
+# Rebase interactivo
+git rebase -i HEAD~3
+
+# Rebase de una branch sobre otra
+git checkout feature
+git rebase main
+
+# Rebase y mantener merge commits
+git rebase --preserve-merges main
+```
+
+### Operaciones de rebase interactivo
+
+```bash
+# En el editor que se abre:
+pick a1b2c3d Primer commit
+squash e4f5g6h Segundo commit (se combina con el anterior)
+edit i7j8k9l Tercer commit (pausa para editar)
+drop m1n2o3p Cuarto commit (se elimina)
+```
+
+## 4. Git Workflows
+
+### Git Flow
+
+Workflow estructurado para releases y features.
+
+```bash
+# Instalar git-flow
+# macOS: brew install git-flow
+# Ubuntu: apt-get install git-flow
+
+# Inicializar git-flow
+git flow init
+
+# Features
+git flow feature start nueva-funcionalidad
+git flow feature finish nueva-funcionalidad
+
+# Releases
+git flow release start 1.0.0
+git flow release finish 1.0.0
+
+# Hotfixes
+git flow hotfix start fix-critico
+git flow hotfix finish fix-critico
+```
+
+#### Estructura de branches en Git Flow
+
+```text
+main (producción)
+  ↑
+develop (integración)
+  ↑
+feature/nueva-funcionalidad
+feature/otra-funcionalidad
+  ↑
+release/1.0.0
+  ↑
+hotfix/fix-urgente
+```
+
+### GitHub Flow
+
+Workflow simplificado para equipos ágiles.
+
+```bash
+# 1. Crear branch desde main
+git checkout main
+git pull origin main
+git checkout -b feature/nueva-funcionalidad
+
+# 2. Hacer commits
+git add .
+git commit -m "feat: agregar nueva funcionalidad"
+
+# 3. Push y crear Pull Request
+git push origin feature/nueva-funcionalidad
+
+# 4. Después de merge, limpiar
+git checkout main
+git pull origin main
+git branch -d feature/nueva-funcionalidad
+```
+
+### GitLab Flow
+
+Combina lo mejor de Git Flow y GitHub Flow.
+
+```bash
+# Production branch protegida
+main → production
+
+# Feature branches
+main → feature/nueva-funcionalidad → main
+
+# Environment branches
+main → staging → production
+```
+
+### Trunk-based Development
+
+```bash
+# Trabajo directo en main con branches de vida corta
+git checkout main
+git pull origin main
+git checkout -b feature/small-change
+# ... cambios pequeños
+git push origin feature/small-change
+# Merge rápido
+```
+
+## 5. Comandos Avanzados
+
+### Stash (guardar trabajo temporal)
+
+```bash
+# Guardar cambios temporalmente
+git stash
+git stash save "mensaje descriptivo"
+
+# Listar stashes
+git stash list
+
+# Aplicar stash
+git stash apply           # Mantiene en stash
+git stash pop            # Aplica y elimina del stash
+git stash apply stash@{2} # Stash específico
+
+# Eliminar stashes
+git stash drop stash@{0}
+git stash clear          # Eliminar todos
+```
+
+### Cherry-pick
+
+```bash
+# Aplicar commit específico a branch actual
+git cherry-pick commit-hash
+
+# Cherry-pick múltiples commits
+git cherry-pick commit1 commit2 commit3
+
+# Cherry-pick rango de commits
+git cherry-pick commit1..commit3
+```
+
+### Bisect (encontrar bugs)
+
+```bash
+# Iniciar bisect
+git bisect start
+git bisect bad           # Commit actual tiene bug
+git bisect good v1.0     # Commit que sabemos funciona
+
+# Git irá dividiendo el rango
+git bisect good    # Si este commit funciona
+git bisect bad     # Si este commit tiene el bug
+
+# Terminar bisect
+git bisect reset
+```
+
+### Reflog (historial de referencias)
+
+```bash
+# Ver historial de cambios en HEAD
+git reflog
+
+# Recuperar commit "perdido"
+git reflog
+git checkout commit-hash
+git checkout -b recuperar-trabajo
+```
+
+### Blame (ver autoría)
+
+```bash
+# Ver quién modificó cada línea
+git blame archivo.txt
+
+# Blame con más contexto
+git blame -L 10,20 archivo.txt  # Líneas 10-20
+git blame -C archivo.txt        # Detectar código movido/copiado
+```
+
+### Grep (buscar en código)
+
+```bash
+# Buscar texto en archivos
+git grep "función"
+git grep -n "TODO"              # Con números de línea
+git grep -i "error"             # Case insensitive
+git grep "bug" HEAD~5           # En commit específico
+```
+
+## 6. Resolución de Conflictos
+
+### Identificar conflictos
+
+```bash
+# Cuando aparece conflicto durante merge/rebase
+git status
+
+# Ver archivos en conflicto
+git diff --name-only --diff-filter=U
+```
+
+### Anatomía de un conflicto
+
+```js
+// Código de la rama actual
+function calcular() {
+  return a + b;
+}
+// Código de la rama que se está mergeando
+function calcular() {
+  return a * b;
+}
+```
+
+### Herramientas para resolver conflictos
+
+```bash
+# Configurar herramienta de merge
+git config --global merge.tool vimdiff
+git config --global merge.tool meld
+git config --global merge.tool vscode
+
+# Usar herramienta configurada
+git mergetool
+
+# Resolver manualmente y continuar
+git add archivo-resuelto.txt
+git commit  # Para merge
+git rebase --continue  # Para rebase
+```
+
+### Estrategias de merge
+
+```bash
+# Estrategia recursiva (por defecto)
+git merge -s recursive branch
+
+# Preferir nuestra versión
+git merge -X ours branch
+
+# Preferir su versión
+git merge -X theirs branch
+
+# Merge octopus (múltiples branches)
+git merge -s octopus branch1 branch2 branch3
+```
+
+## 7. Git Hooks
+
+Los hooks son scripts que se ejecutan automáticamente en ciertos eventos de Git.
+
+### Tipos de hooks
+
+| Hook         | Cuándo se ejecuta                  | Uso común                  |
+| ------------ | ---------------------------------- | -------------------------- |
+| pre-commit   | Antes de crear commit              | Linting, tests, formatting |
+| commit-msg   | Al validar mensaje de commit       | Validar formato de mensaje |
+| pre-push     | Antes de push                      | Tests de integración       |
+| post-receive | Después de recibir push (servidor) | Deploy automático          |
+
+### Ejemplo de pre-commit hook
+
+```bash
+#!/bin/bash
+# .git/hooks/pre-commit
+
+echo "Ejecutando pre-commit hook..."
+
+# Ejecutar linter
+npm run lint
+if [ $? -ne 0 ]; then
+    echo "❌ Linting failed. Commit aborted."
+    exit 1
+fi
+
+# Ejecutar tests
+npm test
+if [ $? -ne 0 ]; then
+    echo "❌ Tests failed. Commit aborted."
+    exit 1
+fi
+
+echo "✅ Pre-commit checks passed!"
+exit 0
+```
+
+### Hacer hook ejecutable
+
+```bash
+chmod +x .git/hooks/pre-commit
+```
+
+### Husky (hooks para proyectos Node.js)
+
+```bash
+# Instalar husky
+npm install --save-dev husky
+
+# Inicializar
+npx husky install
+
+# Agregar hook
+npx husky add .husky/pre-commit "npm run lint"
+npx husky add .husky/pre-push "npm test"
+```
+
+## 8. Trabajo con Remotos
+
+### Gestión de remotos
+
+```bash
+# Ver remotos
+git remote -v
+
+# Agregar remoto
+git remote add origin https://github.com/usuario/repo.git
+git remote add upstream https://github.com/original/repo.git
+
+# Cambiar URL de remoto
+git remote set-url origin https://github.com/nuevo/repo.git
+
+# Eliminar remoto
+git remote remove old-origin
+```
+
+### Push y Pull
+
+```bash
+# Push básico
+git push origin main
+git push origin feature-branch
+
+# Push con upstream
+git push -u origin feature-branch  # Primera vez
+git push  # Siguientes veces
+
+# Push tags
+git push origin --tags
+git push origin v1.0.0
+
+# Pull básico
+git pull origin main
+
+# Pull con rebase
+git pull --rebase origin main
+
+# Fetch (sin merge automático)
+git fetch origin
+git fetch --all
+```
+
+### Tracking branches
+
+```bash
+# Crear branch que trackea remota
+git checkout -b local-branch origin/remote-branch
+git switch -c local-branch origin/remote-branch
+
+# Configurar tracking para branch existente
+git branch --set-upstream-to=origin/remote-branch local-branch
+git push -u origin local-branch
+```
+
+## 9. Tags y Releases
+
+### Crear tags
+
+```bash
+# Tag ligero
+git tag v1.0.0
+
+# Tag anotado (recomendado)
+git tag -a v1.0.0 -m "Versión 1.0.0 - Release inicial"
+
+# Tag en commit específico
+git tag -a v1.0.1 commit-hash -m "Hotfix version"
+
+# Listar tags
+git tag
+git tag -l "v1.*"  # Filtrar tags
+```
+
+### Gestionar tags
+
+```bash
+# Ver información de tag
+git show v1.0.0
+
+# Eliminar tag local
+git tag -d v1.0.0
+
+# Eliminar tag remoto
+git push origin --delete v1.0.0
+
+# Push tags
+git push origin v1.0.0
+git push origin --tags  # Todos los tags
+```
+
+### Semantic Versioning
+
+```text
+v1.2.3
+│ │ │
+│ │ └── PATCH: Bug fixes
+│ └──── MINOR: New features (backward compatible)
+└────── MAJOR: Breaking changes
+```
+
+## 10. Mejores prácticas
+
+### Mensajes de commit
+
+#### Formato convencional
+
+```text
+tipo(scope): descripción corta
+
+Descripción más detallada si es necesaria.
+
+- Cambio específico 1
+- Cambio específico 2
+
+Closes #123
+```
+
+#### Tipos de commit
+
+| Tipo     | Descripción                         | Ejemplo                                  |
+| -------- | ----------------------------------- | ---------------------------------------- |
+| feat     | Nueva funcionalidad                 | `feat(auth): agregar login con Google`   |
+| fix      | Corrección de bug                   | `fix(api): corregir error 500 en /users` |
+| docs     | Documentación                       | `docs: actualizar README con ejemplos`   |
+| style    | Cambios de formato (no funcionales) | `style: corregir indentación en main.js` |
+| refactor | Refactorización de código           | `refactor(db): simplificar queries`      |
+| test     | Agregar o modificar tests           | `test: agregar tests para auth service`  |
+| chore    | Tareas de mantenimiento             | `chore: actualizar dependencias`         |
+
+### Branching strategy
+
+#### Nomenclatura de branches
+
+```bash
+# Features
+feature/nombre-funcionalidad
+feature/123-login-social
+feat/user-dashboard
+
+# Bug fixes
+fix/nombre-bug
+fix/456-email-validation
+bugfix/header-responsive
+
+# Hotfixes
+hotfix/nombre-fix-critico
+hotfix/security-patch
+
+# Releases
+release/1.2.0
+release/v2.0.0-beta
+```
+
+### .gitignore efectivo
+
+```bash
+# Dependencias
+node_modules/
+vendor/
+*.lock
+
+# Archivos de sistema
+.DS_Store
+Thumbs.db
+*.tmp
+*.swp
+
+# IDEs
+.vscode/
+.idea/
+*.sublime-*
+
+# Logs
+*.log
+logs/
+
+# Variables de entorno
+.env
+.env.local
+.env.production
+
+# Build/dist
+dist/
+build/
+out/
+
+# Coverage
+coverage/
+*.lcov
+
+# Cache
+.cache/
+.parcel-cache/
+```
+
+### Configuración de repositorio
+
+```bash
+# Configurar protección de branches
+# En GitHub/GitLab:
+# - Proteger main/develop
+# - Requerir reviews
+# - Requerir status checks
+# - No permitir force push
+
+# Configurar merge/rebase por defecto
+git config --global pull.rebase true
+git config --global branch.autosetupmerge always
+git config --global branch.autosetuprebase always
+```
+
+### Workflow recomendado para equipos
+
+```bash
+# 1. Sincronizar con main
+git checkout main
+git pull origin main
+
+# 2. Crear feature branch
+git checkout -b feature/nueva-funcionalidad
+
+# 3. Trabajar en la feature
+git add .
+git commit -m "feat: implementar nueva funcionalidad"
+git push -u origin feature/nueva-funcionalidad
+
+# 4. Crear Pull/Merge Request
+# - Descripción clara
+# - Screenshots si aplica
+# - Referencias a issues
+# - Tests pasando
+
+# 5. Code Review
+# - Al menos 1-2 reviewers
+# - Resolver comentarios
+# - Actualizar si es necesario
+
+# 6. Merge y cleanup
+git checkout main
+git pull origin main
+git branch -d feature/nueva-funcionalidad
+```
+
+### Comandos de productividad
+
+```bash
+# Aliases útiles
+git config --global alias.st status
+git config --global alias.co checkout
+git config --global alias.br branch
+git config --global alias.ci commit
+git config --global alias.unstage 'reset HEAD --'
+git config --global alias.last 'log -1 HEAD'
+git config --global alias.visual '!gitk'
+
+# Log más bonito
+git config --global alias.lg "log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit"
+
+# Ver branches merged
+git config --global alias.merged "branch --merged"
+
+# Ver archivos cambiados
+git config --global alias.changed "diff --name-only"
+```
+
+## 🎯 Comandos de Emergencia
+
+### Recuperar trabajo perdido
+
+```bash
+# Ver reflog para encontrar commits "perdidos"
+git reflog
+
+# Recuperar commit específico
+git checkout -b recovery commit-hash
+
+# Recuperar archivo eliminado
+git checkout HEAD~1 -- archivo-eliminado.txt
+```
+
+### Deshacer cambios peligrosos
+
+```bash
+# Deshacer git add
+git reset HEAD archivo.txt
+
+# Deshacer último commit (mantener cambios)
+git reset --soft HEAD~1
+
+# Deshacer último commit (descartar cambios) - ¡PELIGROSO!
+git reset --hard HEAD~1
+
+# Deshacer merge
+git reset --hard HEAD~1  # Si no se ha pusheado
+git revert -m 1 commit-hash  # Si ya se pusheó
+```
+
+### Limpiar repositorio
+
+```bash
+# Eliminar archivos untracked
+git clean -f     # Archivos
+git clean -fd    # Archivos y directorios
+git clean -n     # Dry run (ver qué se eliminaría)
+
+# Eliminar branches merged
+git branch --merged | grep -v main | xargs -n 1 git branch -d
+```
+
+## 🚀 Herramientas Complementarias
+
+### GUI Clients
+
+| Herramienta    | Plataforma | Características                            |
+| -------------- | ---------- | ------------------------------------------ |
+| GitKraken      | Multi      | Visual, intuitivo, gratis para open source |
+| SourceTree     | Mac/Win    | Atlassian, potente, gratis                 |
+| GitHub Desktop | Multi      | Simple, integración con GitHub             |
+| Tower          | Mac/Win    | Premium, muy completo                      |
+
+### Terminal integrations
+
+```bash
+# Oh My Zsh con git plugin
+# Muestra branch actual y estado
+
+# Starship prompt
+# Prompt rápido y configurable
+
+# Git completions
+# Autocompletado de comandos Git
+```
+
+### VS Code extensions
+
+- GitLens: Información detallada de Git
+- Git Graph: Visualizar historial
+- Git History: Ver historial de archivos
+- Git Blame: Ver autoría en líneas
+
+## 📋 Cheat Sheet Rápido
+
+### Comandos diarios
+
+```bash
+git status                    # Ver estado
+git add .                     # Stagear todo
+git commit -m "mensaje"       # Commit
+git push                      # Subir cambios
+git pull                      # Bajar cambios
+git checkout -b nueva-branch  # Crear branch
+git merge branch-name         # Mergear branch
+```
+
+### Comandos de rescate
+
+```bash
+git reflog                    # Ver historial de cambios
+git stash                     # Guardar trabajo temporal
+git reset --soft HEAD~1      # Deshacer último commit
+git checkout -- archivo.txt  # Descartar cambios
+git clean -fd                 # Limpiar archivos untracked
+```
+
+### Información útil
+
+```bash
+git log --oneline            # Historial compacto
+git diff                     # Ver cambios
+git blame archivo.txt        # Ver autoría
+git show commit-hash         # Ver commit específico
+git branch -a                # Ver todas las branches
+```
